[tool.poetry]
name = "data-science-project-template"
version = "0.1.0"
description = ""
authors = ["Panagiotis Papaemmanouil <papaemman.pan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
plotly = "^5.15.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
